<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg5"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/textView"
                    android:layout_margin="10dp"
                    android:text="@string/quizInst"
                    android:textAlignment="center"
                    android:textStyle="bold"/>

                <TextView
                    style="@style/textView"
                    android:layout_margin="10dp"
                    android:text="@string/instructionNo1" />

                <TextView
                    style="@style/textView"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/instructionNo2" />

                <TextView
                    style="@style/textView"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/instructionNo3" />

                <TextView
                    style="@style/textView"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/instructionNo4" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--  For Question No 1  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/textView"
                    android:id="@+id/question1"
                    android:text="@string/question1"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:id="@+id/radio_gb1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/q1_opt_a"
                        style="@style/StyleButton"
                        android:text="@string/q1_opt_a" />

                    <RadioButton
                        android:id="@+id/q1_opt_b"
                        style="@style/StyleButton"
                        android:text="@string/q1_opt_b" />

                    <RadioButton
                        android:id="@+id/q1_opt_c"
                        style="@style/StyleButton"
                        android:text="@string/q1_opt_c" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!--  For Question No 2  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question2"
                    style="@style/textView"
                    android:text="@string/question2"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q2_opt_a"
                        style="@style/StyleButton"
                        android:text="@string/q2_opt_a" />

                    <RadioButton
                        android:id="@+id/q2_opt_b"
                        style="@style/StyleButton"
                        android:text="@string/q2_opt_b" />

                    <RadioButton
                        android:id="@+id/q2_opt_c"
                        style="@style/StyleButton"
                        android:text="@string/q2_opt_c" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!--  For Question No 3  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question3"
                    style="@style/textView"
                    android:text="@string/question3"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q3_opt_a"
                        style="@style/StyleButton"
                        android:text="@string/q3_opt_a" />

                    <RadioButton
                        android:id="@+id/q3_opt_b"
                        style="@style/StyleButton"
                        android:text="@string/q3_opt_b" />

                    <RadioButton
                        android:id="@+id/q3_opt_c"
                        style="@style/StyleButton"
                        android:text="@string/q3_opt_c" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!--  For Question No 4  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question4"
                    style="@style/textView"
                    android:text="@string/question4"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q4_opt_a"
                        style="@style/StyleButton"
                        android:text="@string/q4_opt_a" />

                    <RadioButton
                        android:id="@+id/q4_opt_b"
                        style="@style/StyleButton"
                        android:text="@string/q4_opt_b" />

                    <RadioButton
                        android:id="@+id/q4_opt_c"
                        style="@style/StyleButton"
                        android:text="@string/q4_opt_c" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--  For Question No 5  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question5"
                    style="@style/textView"
                    android:text="@string/question5"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/q5_opt_a"
                    style="@style/StyleButton"
                    android:text="@string/q5_opt_a" />

                <CheckBox
                    android:id="@+id/q5_opt_b"
                    style="@style/StyleButton"
                    android:text="@string/q5_opt_b" />

                <CheckBox
                    android:id="@+id/q5_opt_c"
                    style="@style/StyleButton"
                    android:text="@string/q5_opt_c" />

                <CheckBox
                    android:id="@+id/q5_opt_d"
                    style="@style/StyleButton"
                    android:text="@string/q5_opt_d" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--  For Question No 6  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question6"
                    style="@style/textView"
                    android:text="@string/question6"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q6_opt_a"
                        style="@style/StyleButton"
                        android:text="@string/q6_opt_a" />

                    <RadioButton
                        android:id="@+id/q6_opt_b"
                        style="@style/StyleButton"
                        android:text="@string/q6_opt_b" />

                    <RadioButton
                        android:id="@+id/q6_opt_c"
                        style="@style/StyleButton"
                        android:text="@string/q6_opt_c" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--  For Question No 7  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question7"
                    style="@style/textView"
                    android:text="@string/question7"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/q7_opt_a"
                    style="@style/StyleButton"
                    android:text="@string/q7_opt_a" />

                <CheckBox
                    android:id="@+id/q7_opt_b"
                    style="@style/StyleButton"
                    android:text="@string/q7_opt_b" />

                <CheckBox
                    android:id="@+id/q7_opt_c"
                    style="@style/StyleButton"
                    android:text="@string/q7_opt_c" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--  For Question No 8  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question8"
                    style="@style/textView"
                    android:text="@string/question8"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/q8_ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="LabelFor" />

                <TextView
                    style="@style/textView"
                    android:text="@string/q8_opt_a" />

                <TextView
                    style="@style/textView"
                    android:text="@string/q8_opt_b" />

                <TextView
                    style="@style/textView"
                    android:text="@string/q8_opt_c" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--  For Question No 9  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question9"
                    style="@style/textView"
                    android:text="@string/question9"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q9_opt_a"
                        style="@style/StyleButton"
                        android:text="@string/q9_opt_a" />

                    <RadioButton
                        android:id="@+id/q9_opt_b"
                        style="@style/StyleButton"
                        android:text="@string/q9_opt_b" />

                    <RadioButton
                        android:id="@+id/q9_opt_c"
                        style="@style/StyleButton"
                        android:text="@string/q9_opt_c" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--  For Question No 10  -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/question10"
                    style="@style/textView"
                    android:text="@string/question1"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/q10_opt_a"
                        style="@style/StyleButton"
                        android:text="@string/q10_opt_a" />

                    <RadioButton
                        android:id="@+id/q10_opt_b"
                        style="@style/StyleButton"
                        android:text="@string/q10_opt_b" />

                    <RadioButton
                        android:id="@+id/q10_opt_c"
                        style="@style/StyleButton"
                        android:text="@string/q10_opt_c" />

                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--  Submit Button  -->
        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/submit_button"
            android:text="@string/submitButton"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>